--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
     <% if @post.comments.empty? %>
     <p>Add comment</p>
     <% else %>
-    <% @post.most_recent_comments.each do |comment| %>
+    <% @post.recent_comments.each do |comment| %>
       <p><%= comment.author.name %>: <%= comment.text %></p>
     <%end%>
     <%end%>
