--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,9 @@
      <p><%= @user.bio %></p>
     </div>
     <div class="user-posts">
-    <% @user.most_recent_posts.each do |post| %>
+    <% @user.recent_posts.each do |post| %>
         <%= link_to user_post_path(user_id:@user.id, id: post.id) do%>
-      <%= render "shared/posts_details", post: post %>
+      <%= render "shared/post_details", post: post %>
         <%end%>
     <%end%>
     </div>
