--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <div>
    <% @posts.each_with_index do |post| %>
      <%= link_to user_post_path(user_id:@user.id, id: post.id) do%>
-       <%= render "shared/posts_details", post: post %>
+       <%= render "shared/post_details", post: post %>
         <div class="comments">
         <% if post.comments.empty? %>
           <p>Empty</p>
