--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,21 +1,38 @@
 body {
-    color: #000;
-  }
-  
-  a {
-    text-decoration: none;
-    color: rgb(10, 88, 189);
-  }
-  
-  .container {
-    display: flex;
-    gap: 50px;
-    margin: 20px 0;
-    align-items: center;
-    border: 2px solid black;
-    padding: 10px 20px;
-  }
-  
-  .posts-counter {
-    color: #000;
-  }
+  color: #000;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(10, 88, 189);
+}
+
+.container {
+  display: flex;
+  gap: 50px;
+  margin: 20px 0;
+  align-items: center;
+  border: 2px solid black;
+  padding: 10px 20px;
+}
+
+.posts-counter {
+  color: #000;
+}
+
+.full_post {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.post_body,
+.post-comments {
+  border: 2px solid black;
+  padding: 10px;
+}
+
+.post_header {
+  display: flex;
+  justify-content: space-between;
+}
