--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,16 @@
 <div class="posts">
  <%= render "shared/details", user: @user %>
-  <div>
+  <div class="all_posts">
    <% @posts.each_with_index do |post| %>
+    <div>
      <%= link_to user_post_path(user_id:@user.id, id: post.id) do%>
        <%= render "shared/post_details", post: post %>
+     </div>
         <div class="comments">
         <% if post.comments.empty? %>
           <p>Empty</p>
         <% else %>
-            <% @recent_comments.each do |comment| %>
+            <% post.recent_comments.each do |comment| %>
              <p class="comment-body"><%= comment.author.name %>: <%= comment.text %></p>
             <%end%>
             <%end%>
