--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,15 @@
         <%end%>
     <%end%>
     </div>
-    <button><%= link_to 'See all posts', user_posts_path(@user)%></button>
+    <% if @current_user %>
+<a href="/users/<%= @user.id %>/posts/new">
+<button class="posts-btn">
+        Add new post
+</button></a>
+<% end %>
+
+<a href="/users/<%= @user.id %>/posts">
+<button class="posts-btn">
+        See all posts
+</button></a>
 </div>
