--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,17 +6,17 @@
     </div>
     <div class="user-posts">
     <% @user.recent_posts.each do |post| %>
-        <%= link_to user_post_path(user_id:@user.id, id: post.id) do%>
+        <%= link_to user_post_path(author_id:@user.id, id: post.id) do%>
       <%= render "shared/post_details", post: post %>
         <%end%>
     <%end%>
     </div>
     <% if @current_user %>
-<a href="/users/<%= @user.id %>/posts/new">
-<button class="posts-btn">
+    <a href="/users/<%= @user.id %>/posts/new">
+    <button class="posts-btn">
         Add new post
-</button></a>
-<% end %>
+      </button></a>
+    <% end %>
 
 <a href="/users/<%= @user.id %>/posts">
 <button class="posts-btn">
