--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -69,3 +69,25 @@ a {
   margin-top: 15px;
   margin-left: 30%;
 }
+
+.devise_form {
+  width: 100%;
+  margin-left: 10%;
+}
+
+.field input {
+  width: 80%;
+  padding: 10px;
+  margin: 10px;
+}
+
+.actions input {
+  width: 80%;
+  padding: 10px;
+  margin-top: 10px;
+  margin-left: 23px;
+}
+
+.devise_form h2 {
+  margin-left: 30%;
+}
